# simpleaccounts

./: .gitignore  Cargo.toml  Dockerfile  README.md  Settings.toml  compose.yaml  flake.nix
migrations/: init.sql  tokens.sql  users.sql
src/: configuration.rs  database.rs  http.rs  main.rs  randoms.rs
src/auth/: models.rs
src/auth/endpoints/: mod.rs
src/database/: postgresql.rs
src/sessions/: models.rs
src/sessions/endpoints/: login_request.rs  mod.rs  sessions_validate.rs
src/tokens/: endpoints.rs  mod.rs  models.rs
src/tokens/endpoints/: mod.rs  new.rs  token_new.rs  token_validate.rs
src/users/: endpoints.rs  models.rs
src/users/endpoints/: balance_change.rs  mod.rs  user_delete.rs  user_new.rs  users_delete.rs  users_new.rs
src/wallets/: mod.rs  models.rs
src/wallets/endpoints/: balance_change.rs  balance_get.rs  mod.rs
