[package]
name = "simpleaccounts"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = { version = "*" }
uuid = { version = "*", features = ["v4"] }

serde = { version = "*" }
serde_json = { version = "*" }
toml = { version = "*" }

actix-web = { version = "4.9" }
hashcash = { version = "0.1.1" }
totp-rs = { version = "5.7.0", features = ["otpauth"] }
pgp = { version = "0.16.0" }

sqlx = { version = "*", features = ["postgres", "runtime-tokio"] }
r2d2 = { version = "*" }
redis = { version = "*", features = ["r2d2"] }
